--- a/search.html
+++ b/search.html
@@ -59,5 +59,6 @@ SOFTWARE.
     {% endfor %}
   };
 </script>
+<script src="/keywords.js"></script>
 <script src="https://unpkg.com/lunr/lunr.js"></script>
 <script src="/search.js"></script>
